--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json ",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -26,6 +26,7 @@
     "jwt-decode": "^3.1.2",
     "plotly.js-dist-min": "^2.18.0",
     "rxjs": "~7.8.0",
+    "ts-cacheable": "^1.0.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
