--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "angular-plotly.js": "^4.0.4",
     "firebase": "^9.16.0",
     "jwt-decode": "^3.1.2",
+    "plotly.js-dist": "^2.22.0",
     "plotly.js-dist-min": "^2.22.0",
     "rxjs": "~7.8.0",
+    "simple-statistics": "^7.8.3",
     "ts-cacheable": "^1.0.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
