--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "angular-plotly.js": "^4.0.4",
+    "d3": "^7.8.4",
+    "d3-scale-chromatic": "^3.0.0",
     "firebase": "^9.16.0",
     "jwt-decode": "^3.1.2",
+    "mathjs": "^11.8.0",
     "plotly.js-dist": "^2.22.0",
     "plotly.js-dist-min": "^2.22.0",
     "rxjs": "~7.8.0",
+    "science": "^1.9.3",
+    "scipy": "^0.1.4",
     "simple-statistics": "^7.8.3",
     "ts-cacheable": "^1.0.9",
     "tslib": "^2.3.0",
@@ -36,6 +41,7 @@
     "@angular-devkit/build-angular": "^15.1.2",
     "@angular/cli": "~15.1.2",
     "@angular/compiler-cli": "^15.1.0",
+    "@types/d3": "^7.4.0",
     "@types/jasmine": "~4.3.0",
     "@types/plotly.js-dist-min": "^2.3.1",
     "jasmine-core": "~4.5.0",
