--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "angular-plotly.js": "^4.0.4",
     "d3": "^7.8.4",
     "d3-scale-chromatic": "^3.0.0",
+    "file-saver": "^2.0.5",
     "firebase": "^9.16.0",
     "jwt-decode": "^3.1.2",
     "mathjs": "^11.8.0",
@@ -42,6 +45,7 @@
     "@angular/cli": "~15.1.2",
     "@angular/compiler-cli": "^15.1.0",
     "@types/d3": "^7.4.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
     "@types/plotly.js-dist-min": "^2.3.1",
     "jasmine-core": "~4.5.0",
